--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <table>
       <tr>
         <td style= "width:50%;">
-            <img class = "newappIcon" src="images/iKonnect.jpg">
+            <img class = "newappIcon" src="images/37881657_2037308402948419_6708018903739531264_n.jpg">
         </td>
         <td>
           <h1>iKonnect Toolchain Demo </h1>
